banco de dados postgres e criacao automatica da base de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,18 @@
 #posso definir outra porta assim 
 
 #server.port=${port:8081}
- 
 
+#logging.level.org.springframework=ERROR
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.platform=aulajpa
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true 
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.datasource.initialization-mode=always
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
