--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.password=postgres
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true 
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.initialization-mode=always
 
