criando profile de desenvolvimento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,1 @@
-#a porta default do springboot eh 8080
-#se essa porta ja estiver em uso por outra aplicacao
-#posso definir outra porta assim 
-
-#server.port=${port:8081}
-
-#logging.level.org.springframework=ERROR
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.platform=aulajpa
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true 
-
-spring.jpa.hibernate.ddl-auto=update
-
-spring.datasource.initialization-mode=always
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.profiles.active=test
